--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
   "dependencies": {
     "connect-pg-simple": "^7.0.0",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-flash": "0.0.2",
     "express-session": "^1.17.3",
+    "helmet": "^5.1.0",
     "jest-sorted": "^1.0.14",
     "nodemailer": "^6.7.5",
     "passport": "^0.5.3",
